--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header.header-fixed {
-  background: linear-gradient(45deg, #1de099, #1dc8cd);
+  background: linear-gradient(45deg, #4d4d4d, #333333);
   padding: 20px 0;
   height: 72px;
   transition: all 0.5s;
